# ami_broker

utility_client/: CMakeLists.txt  Makefile  MarketDataFeedV3.pb.h  MarketDataFeedV3.proto  MarketDataUpdater.hpp  WebRaw.sln  WebRaw.vcxproj  WebRaw.vcxproj.filters  WebSocketClient.cpp  WebSocketClient.hpp  WebSocketHandler.cpp  WebSocketHandler.h  cmake_install.cmake  sample_main.cpp  step7.cpp  step8.cpp  step8.hpp
utility_client/WebRaw/x64/Debug/: vc143.idb
utility_client/WebRaw/x64/Debug/WebRaw.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  WebRaw.lastbuildstate
utility_client/build2/: CMakeCache.txt  Makefile  MarketDataFeedV3.pb.cc  cmake_install.cmake
